# ROS2_Audio_Tools

./: .gitignore  404.html  CMakeLists.txt  README.md  ROS2_Audio_Tools_project_knowledge.md  colcon.pkg  cyclonedds.xml  index.html  mkdocs.yml  package.xml  pixi.toml  setup_ros_tailscale.sh  test.bat
.github/workflows/: ros2_build_ros2_debian_package.yml  ros2_jazzy_code_compiles.yml  ros2_jazzy_code_compiles_windows.yml  ros2_jazzy_conda_package_linux.yml  ros2_jazzy_conda_package_win.yml
about/implementation/: index.html
conda/: bld.bat  build.sh  meta.yaml
conda/lin/: pixi.toml  recipe.yaml
conda/lin/recipe/: build_ament_cmake.sh  recipe.yaml
conda/win/: pixi.toml
conda/win/recipe/: bld_ament_cmake.bat  bld_catkin.bat  recipe.yaml
contributing/license/: index.html
contributing/rules/: index.html
docs/: index.md
docs/about/: implementation.md  voice_activity_detection.md 
docs/usage/: overview.md  ros2_pixi_build_linux_windows.md  usage_with_native_linux.md
launch/: audio_vad.launch.py
msg/: AudioDataStamped.msg
search/: search_index.json
src/: audio_capture_node.cpp  audio_capture_node.hpp  audio_playback_node.cpp  audio_playback_node.hpp  vad_node.cpp  vad_node.hpp
usage/overview/: index.html
usage/ros2_pixi_build_linux_windows/: index.html
usage/usage_with_native_linux/: index.html
